# winevt-tailer

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  appveyor.yml  pyproject.toml
packaging/: pyinstaller_utils.py
scripts/: json_coverage.py
tests/: test_main.py  test_opts.py  test_tailer.py  test_transforms.py  test_utils.py
winevt_tailer/: __init__.py  const.py  consts.py  errors.py  main.py  opts.py  tailer.py  transforms.py  utils.py
