[tool.poetry]
name = "winevt-tailer"
version = "0.3.4"
description = 'Windows Event Log Tailer'
authors = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
maintainers = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
license = "MIT"
repository = "https://github.com/logdna/winevt-tailer"
documentation = "https://github.com/logdna/winevt-tailer"
readme = "README.md"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "winevt-tailer/VERSION:(\\d+\\.\\d+\\.\\d+)"
branch = "master"
commit_subject = "release: Version {version} [skip ci]"
commit_author = "LogDNA Bot <bot@logdna.com>"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pywin32 = "^304"
lxml = "^4.9.1"
PyYAML = "^6.0"
pydantic = "^1.10.2"
single-source = "^0.3.0"
google-crc32c = "^1.5.0"
psutil = "^5.9.4"
lazy-string = "^1.0.0"

[tool.poetry.dev-dependencies]
coverage = "^5.4"
flake8 = "^3.8.4"
yapf = "^0.30.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
taskipy = "^1.6.0"
python-semantic-release = "^7.16.1"
tomlkit = "^0.11.5"
pyinstaller = "^5.6.2"
pyinstaller-versionfile = "^2.0.0"
tinyaes = "^1.0.4"
tomli = "^2.0.1"
pyinstaller-hooks-contrib = "^2022.13"
cffi = "^1.15.1"

[tool.taskipy.tasks]
pre_test = "rm -rf coverage;mkdir coverage"
test = "pytest --junitxml=coverage/test.xml --cov=./ --cov-report=html --verbose tests/"
post_test = "python scripts/json_coverage.py"
lint = "flake8 --doctests --ignore=E402,F841,F401,E302,E305 --max-line-length=120"
"lint:fix" =  "yapf -r -i winevt-tailer scripts tests"
"post_lint:fix" = "task lint"
release = "semantic-release publish"
create_version_file = "python packaging/pyinstaller_utils.py ./pyproject.toml ./build/version_file.txt"
create_exe = "pyinstaller.exe --clean --key Mezmo --specpath ./build --distpath ./build/dist --version-file=version_file.txt --icon ../packaging/images/Mezmo.ico -y --name winevt-tailer --copy-metadata winevt_tailer --hidden-import winevt_tailer.transforms --onefile winevt_tailer/main.py"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["winevt-tailer"]

[tool.coverage.report]
fail_under = 54
show_missing = true

[tool.coverage.json]
output = "coverage/coverage.json"

[tool.coverage.html]
directory = "coverage"
show_contexts = true

[tool.poetry.scripts]
run = "winevt_tailer.main:main"

[tool.poetry.urls]
issues = "https://github.com/logdna/winevt-tailer/issues"
